<resources>
    <string name="app_name">UnoMed</string>
    <string name="image_description">Your logo</string>
    <string name="user_details_title">Enter Your Details</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_age">Age</string>
    <string name="next_button">Next</string>
    <string name="brain_tumor_diagnosis">Brain Tumor Diagnosis</string>
    <string name="image_tumor_description">Tumor Image</string>
    <string name="tumor_image_descriptions">A clear tumor image that ends with .jpg or .png to help the AI model diagnose you better.</string>
    <string name="upload_image">Upload Image</string>
    <string name="start_scan">Start Scan</string>
    <string name="scan_results">Scan Results</string>
    <string name="scan_results_title">Scan Results</string>
    <string name="scan_result_image_desc">Scan result image</string>
    <string name="tumor_scan_description">Tumor scan description goes here.</string>
    <string name="scan_result_format">Scan result: %1$.2f</string>
    <string name="tumor_image_description">Image of a brain tumor</string>

</resources>
